--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "google-api-python-client>=2.179.0",
     "google-auth-oauthlib>=1.2.2",
     "httpx>=0.28.1",
+    "hypothesis>=6.151.4",
     "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.10.1",
     "python-multipart>=0.0.20",
