multi-user auth part 1

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/chooseyourtub
 REDIS_URL=redis://localhost:6379/0
 API_ORIGIN=http://localhost:5173
 YOUTUBE_API_KEY=your_youtube_api_key_here
+AUTH_SECRET=change-me-in-production
 echo_sql=false
 debug_logs=true
