--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "arq>=0.25.0",
     "asyncpg>=0.30.0",
     "fastapi>=0.116.1",
+    "fastapi-users[sqlalchemy]>=14.0.1",
     "feedparser>=6.0.12",
     "google-api-python-client>=2.179.0",
     "google-auth-oauthlib>=1.2.2",
